[gd_scene load_steps=4 format=3 uid="uid://bjy1c24lq0gf7"]

[ext_resource type="Script" uid="uid://g7t4bjlw0n67" path="res://Player/player.gd" id="1_l8h54"]
[ext_resource type="Texture2D" uid="uid://iutpmq0ycoe4" path="res://Resources/frogwizootte-idle.png" id="2_4ntmi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sh265"]
size = Vector2(32, 32)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_l8h54")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sh265")

[node name="RayCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 40)
collision_mask = 0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-8, -8, 16, 16)

[node name="Pivot" type="Node2D" parent="."]

[node name="FrogwizootteIdle" type="Sprite2D" parent="Pivot"]
position = Vector2(1, 5)
scale = Vector2(0.18, 0.18)
texture = ExtResource("2_4ntmi")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_screen_exited"]
